# cordada-ceo-agents

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_guide.md
agents/: 01_discover.md  02_extract.md  03_validate.md  04_compile.md  05_audit.md  06_reflect.md  07_decide.md  08_distribute.md  09_collect_iterate.md  10_context.md
docs/: architecture.html
domain/: __init__.py  calibration.py  contracts.py  evaluation.py  events.py  feedback.py  invariant.py  model.py  registry.py
examples/: carta_aportantes.py
infrastructure/: __init__.py  observability.py
infrastructure/tools/: __init__.py  _shared.py  calendar.py  drive.py  gmail.py  proxy.py  slack.py
orchestrator/: __init__.py  __main__.py  agent_runner.py  canonical.py  config.py  context_cache.py  context_middleware.py  contract_parser.py  event_bus.py  feedback_diff.py  gates.py  google_client.py  heuristic_eval.py  parallel.py  pipeline.py  project.py  slack_client.py  tools.py
tests/: test_agent_runner.py  test_calibration.py  test_config.py  test_context_cache.py  test_contract_parser.py  test_contracts.py  test_cost_enforcement.py  test_cost_governance.py  test_feedback_diff.py  test_gates.py  test_observability.py  test_parallel.py  test_pipeline.py  test_project.py  test_structural_eval.py  test_tools.py
