[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cordada-ceo-agents"
version = "0.1.0"
description = "CEO-level agent pipeline for research, analysis, and decision-making"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
]
slack = [
    "slack-sdk>=3.27.0",
]
all = [
    "cordada-ceo-agents[google,slack]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cordada = "orchestrator.__main__:main"

[tool.setuptools.packages.find]
include = ["orchestrator*", "agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
